--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -3,27 +3,27 @@
   <app-stepper [currentStep]="1" [stepperData]="steps"></app-stepper>
   <div class="container mx-2 mt-n1">
     <div class="card mb-3" style=" position: relative;">
-     <!-- <ngx-spinner name="quickQuoteScreen" type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B"
-                   size="medium" bdColor="rgba(255, 255, 255, 0.9)"></ngx-spinner>-->
+      <!-- <ngx-spinner name="quickQuoteScreen" type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B"
+                    size="medium" bdColor="rgba(255, 255, 255, 0.9)"></ngx-spinner>-->
       <div class="card-body">
         <div class="d-inline me-4">
           <input class="form-check-input me-2 mt-2"
-            (click)="toggleToNewClient()"
-            type="radio"
-            name="flexRadioDefault"
-            id="newClient"
-            [checked]="isNewClient">
+                 (click)="toggleToNewClient()"
+                 type="radio"
+                 name="flexRadioDefault"
+                 id="newClient"
+                 [checked]="isNewClient">
           <label class="form-check-label mb-4 mt-2" for="newClient">
             {{ 'gis.quotation.new_client' | translate }}
           </label>
         </div>
         <div class="d-inline ms-4">
           <input class="form-check-input me-2 ms-4 mt-2"
-            (click)="toggleExistingClient()"
-            type="radio"
-            name="flexRadioDefault"
-            [checked]="existingClientSelected"
-            id="existingClient">
+                 (click)="toggleExistingClient()"
+                 type="radio"
+                 name="flexRadioDefault"
+                 [checked]="existingClientSelected"
+                 id="existingClient">
           <label class="form-check-label mb-4 mt-2" for="existingClient">
             {{ 'gis.quotation.existing_client' | translate }}
           </label>
@@ -37,20 +37,20 @@
                   translate
               }}</label>
             <input type="text" id="quote-input" class="form-control form-control-sm mb-1"
-              formControlName="clientName"
+                   formControlName="clientName"
             >
           </div>
           <ng-template #existingClient>
             <div class=" col-sm-4 col-6">
               <label for="Client" class="required quote-label" id="Client"> {{
-                'gis.quotation.client' |
-                  translate
+                  'gis.quotation.client' |
+                    translate
                 }}</label>
               <input type="text" formControlName="clientName" id="quote-input"
-                class="form-select form-control form-control-sm mb-1"
-                data-bs-toggle="modal"
-                data-bs-target="#clientModal"
-                readonly
+                     class="form-select form-control form-control-sm mb-1"
+                     data-bs-toggle="modal"
+                     data-bs-target="#clientModal"
+                     readonly
               >
               <div
                 *ngIf="quickQuoteForm?.get('clientName')?.hasError('email') && quickQuoteForm?.get('clientName').touched && !newClient"
@@ -73,9 +73,7 @@
               class="form-text text-danger">
               {{ 'gis.quotation.invalid_email_address' | translate }}
             </div>
-            <div
-              *ngIf="emailAddressUsed && quickQuoteForm?.get('emailAddress').touched"
-              class="form-text text-danger">
+            <div *ngIf="quickQuoteForm?.get('emailAddress')?.hasError('alreadyUsed') && newClient"  class="form-text text-danger">
               {{ 'gis.quotation.invalid_email_address_used' | translate }}
             </div>
           </div>
@@ -85,21 +83,24 @@
                   translate
               }}</label>
             <ngx-intl-tel-input id="phoneNumber" [cssClass]="'form-control form-control-sm mb-1'"
-              [preferredCountries]="preferredCountries"
-              [enableAutoCountrySelect]="true" [enablePlaceholder]="true"
-              [searchCountryFlag]="true"
-              [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
-              [selectFirstCountry]="false"
-              [style]="{ width: '100%' }"
-              [selectedCountryISO]="CountryISO.Kenya"
-              [phoneValidation]="true" [separateDialCode]="true"
-              [numberFormat]="PhoneNumberFormat.National" formControlName="phoneNumber">
+                                [preferredCountries]="preferredCountries"
+                                [enableAutoCountrySelect]="true" [enablePlaceholder]="true"
+                                [searchCountryFlag]="true"
+                                [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
+                                [selectFirstCountry]="false"
+                                [style]="{ width: '100%' }"
+                                [selectedCountryISO]="CountryISO.Kenya"
+                                [phoneValidation]="true"
+                                [numberFormat]="PhoneNumberFormat.National" formControlName="phoneNumber">
             </ngx-intl-tel-input>
-              <div
-                *ngIf="quickQuoteForm?.get('phoneNumber')?.hasError('validatePhoneNumber') && quickQuoteForm?.get('phoneNumber').touched"
-                class="form-text text-danger">
-                {{ 'gis.quotation.invalid_phone_format' | translate }}
-              </div>
+            <div
+              *ngIf="quickQuoteForm?.get('phoneNumber')?.hasError('validatePhoneNumber') && quickQuoteForm?.get('phoneNumber').touched"
+              class="form-text text-danger">
+              {{ 'gis.quotation.invalid_phone_format' | translate }}
+            </div>
+            <div *ngIf="quickQuoteForm?.get('phoneNumber')?.hasError('alreadyUsed')"  class="form-text text-danger">
+              {{ 'gis.quotation.invalid_phone_number_used' | translate }}
+            </div>
           </div>
           <div class="col-sm-4 col-6">
             <div class="form-group form-group-sm">
@@ -109,10 +110,10 @@
                     translate
                 }}</label><br>
               <p-dropdown formControlName="product" name="product"
-                [options]="ProductDescriptionArray" optionLabel="description" dataKey="code"
-                (onChange)="onProductSelected($event.value)"
-                placeholder=" " [filterBy]="'description'"
-                [placeholder]="parsedProductDesc" [filter]="true"></p-dropdown>
+                          [options]="ProductDescriptionArray" optionLabel="description" dataKey="code"
+                          (onChange)="onProductSelected($event.value)"
+                          placeholder=" " [filterBy]="'description'"
+                          [placeholder]="parsedProductDesc" [filter]="true"></p-dropdown>
               <div
                 *ngIf="quickQuoteForm?.get('product')?.hasError('required') && quickQuoteForm?.get('product').touched"
                 class="form-text text-danger">
@@ -127,10 +128,10 @@
                   'gis.quotation.use_of_property' | translate
                 }}</label><br>
               <p-dropdown formControlName="subClass" name="subclassCode"
-                [options]="allMatchingSubclasses" optionLabel="description" dataKey="code"
-                (onChange)="onSubclassSelected($event.value)"
-                placeholder=" " [filterBy]="'description'"
-                [placeholder]="parsedProductDesc" [filter]="true"></p-dropdown>
+                          [options]="allMatchingSubclasses" optionLabel="description" dataKey="code"
+                          (onChange)="onSubclassSelected($event.value)"
+                          placeholder=" " [filterBy]="'description'"
+                          [placeholder]="parsedProductDesc" [filter]="true"></p-dropdown>
               <div
                 *ngIf="quickQuoteForm?.get('subClass')?.hasError('required') && quickQuoteForm?.get('subClass').touched"
                 class="form-text text-danger">
@@ -147,9 +148,9 @@
                     | translate
                 }}</label><br>
               <p-dropdown formControlName="currency" name="currency" [options]="currencyList"
-                optionLabel="name" [dataKey]="'id'"
-                (onChange)="onCurrencySelected($event.value)"
-                [filterBy]="'name'" [filter]="true" ></p-dropdown>
+                          optionLabel="name" [dataKey]="'id'"
+                          (onChange)="onCurrencySelected($event.value)"
+                          [filterBy]="'name'" [filter]="true"></p-dropdown>
               <div
                 *ngIf="quickQuoteForm?.get('currency')?.hasError('required') && quickQuoteForm?.get('currency').touched"
                 class="form-text text-danger">
@@ -163,13 +164,13 @@
               <label for="cover-From" class="quote-label required" id="cover-From">
                 {{ 'gis.quotation.effective_date' | translate }}</label><br>
               <p-calendar formControlName="effectiveDate" name="effectiveDate"
-                [dateFormat]="dateFormat"
-                inputStyleClass='form-control'
-                [showButtonBar]='true'
-                [style]="{ width: '100%' }"
-                [dataType]="'string'"
-                (ngModelChange)="onDateInputChange(selectedEffectiveDate)"
-                [placeholder]="" [minDate]="minDate">
+                          [dateFormat]="dateFormat"
+                          inputStyleClass='form-control'
+                          [showButtonBar]='true'
+                          [style]="{ width: '100%' }"
+                          [dataType]="'string'"
+                          (onSelect)="onDateInputChange($event)"
+                          [placeholder]="" [minDate]="minDate">
               </p-calendar>
               <div
                 *ngIf="quickQuoteForm?.get('effectiveDate')?.hasError('required') && quickQuoteForm?.get('effectiveDate').touched"
@@ -184,31 +185,33 @@
               <div class="col-sm-4 col-6 dynamic-field">
                 <div class="form-group form-group-sm">
                   <br>
-                  <label for="{{i}}{{field.name}}" class="quote-label" [ngClass]="{'required': isFieldRequired(field.name)}">{{ field.label | translate }}</label>
+                  <label for="{{i}}{{field.name}}" class="quote-label"
+                         [ngClass]="{'required': isFieldRequired(field.name)}">{{ field.label | translate }}</label>
                   <br>
                   <ng-container [ngSwitch]="field.type">
                     <ng-container *ngSwitchCase="'text'">
                       <ng-container *ngIf="field.name==='carRegNo';else inputField">
                         <input type="text" id="quote-input" class="form-control form-control-sm"
-                          (input)="validateCarRegNo(); transformToUpperCase($event)"
-                          [formControlName]="field.name">
+                               (input)="validateCarRegNo(); transformToUpperCase($event)"
+                               [formControlName]="field.name">
                       </ng-container>
                       <ng-template #inputField>
                         <input type="text" id="quote-input" class="form-control form-control-sm"
-                          [formControlName]="field.name">
+                               [formControlName]="field.name">
                       </ng-template>
                     </ng-container>
                     <input *ngSwitchCase="'currency'" type="text" id="quote-input" class="form-control form-control-sm"
-                      [formControlName]="field.name"  currencyMask
-                      [options]='currencyObj'>
+                           [formControlName]="field.name" currencyMask
+                           [options]='currencyObj'>
                     <p-calendar *ngSwitchCase="'date'" [formControlName]="field.name" [name]="field.name"
-                      [dateFormat]="dateFormat" inputStyleClass='form-control' [showButtonBar]='true'
-                      [dataType]="'string'" [style]="{ width: '100%' }"
-                      [placeholder]="field.placeholder"></p-calendar>
+                                [dateFormat]="dateFormat" inputStyleClass='form-control' [showButtonBar]='true'
+                                [minDate]="selectedEffectiveDate"
+                                [dataType]="'string'" [style]="{ width: '100%' }"
+                                [placeholder]="field.placeholder"></p-calendar>
                     <ng-container *ngSwitchCase="'select'">
                       <ng-container *ngIf="field.name === 'yearOfManufacture'">
                         <p-dropdown [formControlName]="field.name" [name]="field.name" [options]="years"
-                          [filter]="true"></p-dropdown>
+                                    [filter]="true"></p-dropdown>
                       </ng-container>
                       <ng-container *ngSwitchCase="'number'">
                         <input type="number" id="quote-input" class="form-control form-control-sm"
@@ -218,20 +221,20 @@
                       </ng-container>
                       <ng-container *ngIf="field.name === 'vesselType'">
                         <p-dropdown [formControlName]="field.name" [name]="field.name" [options]="vesselTypeList"
-                          optionLabel="name" dataKey="code"
-                          [filter]="true"></p-dropdown>
+                                    optionLabel="name" dataKey="code"
+                                    [filter]="true"></p-dropdown>
                       </ng-container>
                       <ng-container *ngIf="field.name === 'modeOfTransport'">
                         <p-dropdown [formControlName]="field.name" [name]="field.name" [options]="modeOfTransport"
-                          optionLabel="description" dataKey="code"
-                          [filterBy]="'description'"
-                          [filter]="true"></p-dropdown>
+                                    optionLabel="description" dataKey="code"
+                                    [filterBy]="'description'"
+                                    [filter]="true"></p-dropdown>
                       </ng-container>
                       <ng-container *ngIf="field.name === 'occupation'">
                         <p-dropdown [formControlName]="field.name" [name]="field.name" [options]="occupationData"
-                          optionLabel="name" dataKey="id"
-                          [filterBy]="'name'"
-                          [filter]="true"></p-dropdown>
+                                    optionLabel="name" dataKey="id"
+                                    [filterBy]="'name'"
+                                    [filter]="true"></p-dropdown>
                       </ng-container>
                     </ng-container>
                   </ng-container>
@@ -246,7 +249,8 @@
                   class="form-text text-danger">
                   {{ field.label }} is invalid
                 </div>
-                <div  *ngIf="field.name === 'carRegNo' && quickQuoteForm?.get(field.name)?.hasError('unique') && quickQuoteForm?.get(field.name).touched"
+                <div
+                  *ngIf="field.name === 'carRegNo' && quickQuoteForm?.get(field.name)?.hasError('unique') && quickQuoteForm?.get(field.name).touched"
                   class="form-text text-danger">
                   {{ 'gis.quotation.this_property_id_is_duplicated' | translate }}
                 </div>
@@ -260,7 +264,7 @@
           <div class="col-6"></div>
           <div class="col-6 d-flex justify-content-end">
             <button type="button" class="btn btn-outline-primary btn-lg" id="compute"
-              (click)="computePremiumV2()">
+                    (click)="computePremiumV2()">
               {{ 'gis.quotation.compute' | translate }}
             </button>
           </div>
@@ -279,7 +283,7 @@
 
       <div class="modal-body">
         <button type="button" #closebutton class="float-end btn-close"
-          data-bs-dismiss="modal" aria-label="Close"></button>
+                data-bs-dismiss="modal" aria-label="Close"></button>
         <p class="text-start" id="selectClient"> {{
             'gis.quotation.select_a_client' |
               translate
@@ -324,17 +328,17 @@
             </tr>
             <tr>
               <th><input type="text" class="form-control" (keyup.enter)="filter($event);"
-                (input)="inputName($event)"></th>
+                         (input)="inputName($event)"></th>
               <th><input type="text" class="form-control" (keyup.enter)="filter($event);"
-                (input)="inputEmail($event)"></th>
+                         (input)="inputEmail($event)"></th>
               <th><input type="text" class="form-control " (keyup.enter)="filter($event);"
-                (input)="inputPhone($event)"></th>
+                         (input)="inputPhone($event)"></th>
               <th><input type="text" class="form-control" (keyup.enter)="filter($event);"
-                (input)="inputIdNumber($event)"></th>
+                         (input)="inputIdNumber($event)"></th>
               <th><input type="text" class="form-control " (keyup.enter)="filter($event);"
-                (input)="inputPin($event)"></th>
+                         (input)="inputPin($event)"></th>
               <th><input type="text" class="form-control" (keyup.enter)="filter($event);"
-                (input)="inputInternalId($event)"></th>
+                         (input)="inputInternalId($event)"></th>
 
             </tr>
           </ng-template>
